<resources>
    <string name="app_name">MovieProject</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="send">Send</string>
    <string name="createAccount">Create account</string>
    <string name="registration">Registration</string>
    <string name="emptyInputError">Field can\'t be empty!</string>
    <string name="emailInputError">Invalid e-mail!</string>
    <string name="passwordLengthError">Password must contain at least 6 characters!</string>
    <string name="confirmPasswordError">Password doesn\'t match</string>
    <string name="alreadyRegistered">Username or e-mail is already registered!</string>
    <string name="loginInputError">Email or password is incorrect!</string>
    <string name="homeScreen">Home</string>
    <string name="profileScreen">Profile</string>
    <string name="favouritesScreen">Favourites</string>
    <string name="nowPlayingScreen">Now playing</string>
    <string name="topRatedMovies">Top rated movies</string>
    <string name="loading">Loading…</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="rememberMe">Remember me</string>
    <string name="uploadPicture">Upload picture</string>
    <string name="relatedMovies">Related movies:</string>
    <string name="addedToFavourites">Movie added to favourites!</string>
    <string name="removedFromFavourites">Movie removed from favourites!</string>
    <string name="changePassword">Change password</string>
    <string name="cancel">Cancel</string>
    <string name="passwordChanged">Password changed successfully!</string>
    <string name="logOut">Logout</string>
</resources>
