<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewContainer"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_margin="30dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/loginButton"
        android:layout_margin="10dp"
        android:text="@string/createAccount" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccount"
        android:layout_centerHorizontal="true"
        android:text="@string/rememberMe" />
</RelativeLayout>