<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ProfileFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="150dp"
        android:text="@string/profileScreen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:background="@color/colorWhite">
            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/logOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="italic"
                    android:textColor="@color/colorBlueEnd"
                    android:text="@string/logOut" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:textColor="@color/colorBlueEnd"
                    android:textAlignment="center"
                    android:layout_margin="20dp"/>

                <Button
                    android:id="@+id/uploadPictureButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_background"
                    android:text="@string/uploadPicture"/>

                <Button
                    android:id="@+id/changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_background"
                    android:text="@string/changePassword"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>